// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1846944c4d716d",
  "0acbc5a9502857",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1b00d905d8d1ca",
  "0ac3df817ec9d7",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "1e4e344a6bc2c3",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "0fe81c0798055b",
  "16f55842903a23",
  "077d3cf531351d",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "197db8ebda4e54",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "09083ecdde8eed",
  "06e258c36a9a54",
  "0fed086c0df55b",
  "0a420d83fd0ca4",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "1c9c03451a6cf4",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "09d66060dee349",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "13c66db66c2010",
  "1fce20e49c2ed3",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "10cb42872548b3",
  "08e960c22335f7",
  "0d8dc14fbe1c88",
  "0d95be27dd8f80",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "0c922082e75bc2",
  "18a7f4a543cce3",
  "03387019de45a1",
  "0742961e3710b8",
  "099d0d0bf99c6e",
  "12b751305d360d",
  "0e10e818566379",
  "0bc3da397297a9",
  "002dc77e2e804d",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1f0f5730bd62cd",
  "0547ff76d08486",
  "18e15040b4813f",
  "0a42ee337ce47a",
  "077cb22e065e1b",
  "0d8e4c1053390b",
  "01b3ad272939b6",
  "19cd8c52d61bbc",
  "07b877fe2f852d",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "09c202dbf6891e",
  "09d2f350b85d73",
  "0a79ff5400a821",
  "1d8d1aa5fd9519",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "1e593936996cbe",
  "1add97a7ac29dc",
  "1729f8f10eeab0",
  "121e584c8c76fc",
  "0ca0b1c087eefe",
  "0210a72ecd9e1f",
  "15268210740502",
  "0bb4a69a3c2714",
  "1032373cedb95e",
  "0dcbe5b8269fb8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "0e7e63e8c36652",
  "1d5be8979b4641",
  "17d8650b84a326",
  "16b3e8df859ca5",
  "0ac63a70adede1",
  "0929f1bf931c93",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "00a8dfd217e9f8",
  "0b12c796e2740a",
  "11f93b68a08cc7",
  "0d8934f81744ed",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "0004c8f44c8226",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1bee20c6b35b98",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "15ef1496fb116f",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "0f4b55db7afa4f",
  "0e1f2b7d598273",
  "1d3a543286fcf1",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "173849d5982830",
  "0a414888df0dc9",
  "00ff072f29f1fb",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "1585c021540f5e",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "04feddba2cfd5e",
  "1f09c40655823f",
  "179fbe496f3cd4",
  "10f7de95b81ff0",
  "1eb5c42ed1045b",
  "039397f322284a",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "0e60bf400f1771",
  "1fff7366085414",
  "1575aae310bac8",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "034395ede1b2fc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "11f072a496a8a3",
  "04009b3fb7ea9d",
  "0661e1bed76065",
  "155f1c9bfa1c03",
  "131db521b32dd4",
  "1ee41896f01efc",
  "00fccc6de45a16",
  "18ab0fcaec7f21",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "1e42fb39527ee6",
  "1b355bdce84c07",
  "0433a6d6e0614a",
  "03e0461c2159e5",
  "1e11236e2f7bde",
  "06b756f05607a9",
  "0e461fed079a55",
  "0035275c717812",
  "0d46796d5633a4",
  "05cfd29b97f272",
  "0cec87037c1e29",
  "03029f5f2d0b1d",
  "0a9e6e314a38c0",
  "1612748f46d656",
  "1b74df0fb348ab",
  "0910a68f49dca2",
  "144d24d33be1aa",
  "1794a44b9ab392",
  "1ccf9d1975c3c5",
  "0f22aa93da8376",
  "02096058f8d017",
  "1b4c17f56e83e6",
  "15b72380f4735c",
  "01ac46a98f93e9",
  "12e4254d13ad99",
  "0ed7d9bac5ce82",
  "0ea52dc0e268f2",
  "1cce09eca0565a",
  "04387886610cc5",
  "0bea11dae9e521",
  "0c4ddb8736f9ba",
  "1a47869818ae7b",
  "0a69abc84f130d",
  "12e6103e1b6481",
  "19710e914f7cd0",
  "147e2c07d5e5a9",
  "1e24c5cc0e5f4a",
  "1a80edd562ffa9",
  "154194e974307f",
  "12187d23701a55",
  "08f34543c58035",
  "0916aa841830b7",
  "19b41f98719b89",
  "099ecf1f645c0a",
  "1ffe1a8288c5e4",
  "08299cced5f03f",
  "17141cc1c95d34",
  "0eacf95cdf3a8b",
  "138d91df957e56",
  "0871b86675d4ef",
  "07bcc5383d5646",
  "0590f58bc1a527",
  "00f411cde71dcc",
  "00cea0c3562fc2",
  "00cbf7ee8727be",
  "1ea3396d5724d6",
  "05b554f5b76e92",
  "126a7aa9885ec5",
  "06ffd47fab64e4",
  "17e3a0cfe487a6",
  "08b82296c4f874",
  "0cb22aeee4b83c",
  "0aca0a27910cac",
  "1b1e7ec62409ba",
  "0365e2e6fe6e8e",
  "1ef40789bbd42e",
  "1ea310737dbf52",
  "1d8f306d53230b",
  "176fa53ebf5f08",
  "0674214fbed0b9",
  "0e6b33f6c4902b",
  "08198302e946ab",
  "19245413beda90",
  "01aa2b997913ea",
  "11f9acbbcb7526",
  "1504a7256dd100",
  "0abaad69e90ff3",
  "04c13772443e63",
  "18b695e3e4e0ea",
  "0ff8b4eb3fa157",
  "00d63fbfe6bccf",
  "1e988123737350",
  "1292613650dca2",
  "054d93e982b377",
  "12925ff6958447",
  "044a6d9d25d27d",
  "00b000f2d516ff",
  "0e9ee429e63562",
  "031a3cfe22700c",
  "0f6ab5f903b2ef",
  "00134d14a1bee1",
  "086a1857c0d34d",
  "1e56eae639d4a2",
  "1cfaae578402c1",
  "1a59a07ad804b8",
  "01e7e1e5de416d",
  "1306145cef8816",
  "1348e49beaedd6",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "04f10567c01a59",
  "1b8b8d18f4e8a9",
  "0713451735baad",
  "02dde2837611e3",
  "126d78098e1aa8",
  "1903fab93717c9",
  "0cdb1047d984d2",
  "0eca15e217199a",
  "0cae8d07250d41",
  "183ed6f538e1d6",
  "0bd093c96f6cc3",
  "12fc73f4251acf",
  "05fd7b9ffd0a74",
  "09829d438eeec1",
  "02249a8bf018c8",
  "02249207b5382c",
  "10544c11d0ad6a",
  "048b92115ba454",
  "063bb238a886d9",
  "0b81ee6ef4a6ce",
  "0a752b5735c64b",
  "172f86a6955501",
  "1878e23c216990",
  "0a15c02b7a8fac",
  "0cb9a359bdb26e",
  "00470063e4e9d4",
  "027004441ad0db",
  "0d8934f81744ed",
  "190bdf9e6f139a",
  "11646050e3131c",
  "082ebf4885d6c2",
  "1fa6260c9f4fac",
  "1b7357075aa0ec",
  "1534062a79483e",
  "0186dc331a1c83",
  "126ff225ae44d0",
  "0e45c93a270904",
  "07798efd61eca7",
  "12cf8a75705d5e",
  "190cacbc9d65e9",
  "1c64f95c9e9edc",
  "12e7638274fb7a",
  "17fdea5f96c110",
  "128ede8b0908b3",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "19582b910d9bf3",
  "16f6e9b1ae4d5a",
  "02f0cacb7c0377",
  "0b1397fe561a4e",
  "1e0c4ba995776f",
  "04c8946da60b23",
  "05a7f3f4b2b654",
  "129b9a506e1ef5",
  "132131d6c6824f",
  "08d18344262c2c",
  "14060333a1b30f",
  "153ef599362cf9",
  "1fb33b3e21a925",
  "0f27d1a64d50f2",
  "08fbf1f4a70907",
  "14ce656373ea46",
  "144976fa6856ac",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "1cae9d9f80cd6e",
  "05475a7c1be350",
  "01ead9f530e59f",
  "0001a562b5a5bc",
  "00f33200675219",
  "01b2af492c9815",
  "047ec648f723bc",
  "00fea81e69a7f9",
  "196b57a8ca0078",
  "0eae111fbe2dfb",
  "0c3e20216dd910",
  "0528816d1f76dc",
  "117b0099f19d57",
  "008c1308d00a35",
  "0a93b8ca185cae",
  "06179dc7769cdc",
  "067cb33f620330",
  "00b1e48b362da7",
  "1a03bd3e41c64f",
  "1bd2a045b6d8a4",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1846944c4d716d",
  "04009b3fb7ea9d",
  "16aabcfb714452",
  "03d9e91310912c",
  "14bdb5ed135628",
  "0e6aecd37eb305",
  "17cce676223629",
  "19fe81306d9c47",
  "0c2b2ce41fe4aa",
  "1e650e3f6f2d6d",
  "028ebf4ba078c5",
  "13573548f28b71",
  "1c8a7437911b1c",
  "048cdb6ef032bb",
  "19e1fe5b4da348",
  "0e52159b7eb888",
  "06b756f05607a9",
  "1ca0e8f10aa81a",
  "1fe1d8cb7803d3",
  "0f80e1b8f66077",
  "070701492c2037",
  "0cec87037c1e29",
  "16f55842903a23",
  "0a9e6e314a38c0",
  "0e1ea098e183eb",
  "0e89ef1bc3ca64",
  "01c6d3b7959739",
  "0160ad55b91d52",
  "0db5ec6d0e58fe",
  "1ccf9d1975c3c5",
  "1e9d4f031c640c",
  "1ce3483c76ed29",
  "070c2206a52e85",
  "0fc1c7b73a3b67",
  "09083ecdde8eed",
  "06e258c36a9a54",
  "0fed086c0df55b",
  "0ea52dc0e268f2",
  "02726ce52c55b1",
  "06de6ec0259fc6",
  "07393a407c5e24",
  "1cbdf84772e5ac",
  "0ce963bdbb5e03",
  "1ecb6ec763c094",
  "12e6103e1b6481",
  "1671b26841dbe6",
  "05db7e21749998",
  "1eb1e402b165ec",
  "18468dc314842f",
  "154194e974307f",
  "1c3faa79b43feb",
  "08f34543c58035",
  "0476c1e75ff053",
  "08c59fd31eedcd",
  "193288a5034edf",
  "0f8919d9d9c26f",
  "19b4f8e779e11c",
  "17141cc1c95d34",
  "13c66db66c2010",
  "138d91df957e56",
  "0e47fabd8b318f",
  "004e300a6f7d87",
  "02d7541f4b4147",
  "00f411cde71dcc",
  "1414c67a7fa61f",
  "10cb42872548b3",
  "08e960c22335f7",
  "0d8dc14fbe1c88",
  "126a7aa9885ec5",
  "019fde5cb0d226",
  "195ac46efea002",
  "1dd84cf64fa640",
  "0af950acdd5aab",
  "09aae866e69683",
  "0c922082e75bc2",
  "18a7f4a543cce3",
  "03387019de45a1",
  "0742961e3710b8",
  "1d8f306d53230b",
  "12b751305d360d",
  "0e10e818566379",
  "0e6b33f6c4902b",
  "002dc77e2e804d",
  "0e2af96a8ff494",
  "1f7f0926fe27b6",
  "1b30e68232a9eb",
  "121fcf81af49cd",
  "0e2f4f1872b79d",
  "06b8c3d57c3ea0",
  "1dc2410eb24fe8",
  "1f0f5730bd62cd",
  "00d63fbfe6bccf",
  "18e15040b4813f",
  "1292613650dca2",
  "054d93e982b377",
  "12925ff6958447",
  "044a6d9d25d27d",
  "19cd8c52d61bbc",
  "0e9ee429e63562",
  "0b3ec2e0ea6e2f",
  "0560dbced8b71b",
  "018f1bdc696497",
  "086a1857c0d34d",
  "1e56eae639d4a2",
  "0a79ff5400a821",
  "1a59a07ad804b8",
  "16cf5859f37b6d",
  "09ab9d0a9a1656",
  "1e593936996cbe",
  "05a7c453142365",
  "059b1f056fda0c",
  "121e584c8c76fc",
  "0aa1a5ee7ed5c8",
  "0210a72ecd9e1f",
  "15268210740502",
  "0bb4a69a3c2714",
  "1032373cedb95e",
  "126d78098e1aa8",
  "16cca8be3fc3f2",
  "1ac1c5677e4819",
  "0ea54280ba196d",
  "074aec105a2bbb",
  "1917060c6e71bf",
  "1cd9c4fb0a1b72",
  "085158b37460b7",
  "0a6300a3c66071",
  "09bb86d9766216",
  "141492083c35b9",
  "02249207b5382c",
  "1d5be8979b4641",
  "17d8650b84a326",
  "16b3e8df859ca5",
  "0ac63a70adede1",
  "0a752b5735c64b",
  "16fb7e5c6f8320",
  "11cb7a8bdbe4a3",
  "09ce83479442f1",
  "00a8dfd217e9f8",
  "00470063e4e9d4",
  "027004441ad0db",
  "0d8934f81744ed",
  "0d8f3c97f7a585",
  "11646050e3131c",
  "082ebf4885d6c2",
  "055ef070f7cc67",
  "122a17c1a885a1",
  "1f01c68ef76633",
  "1cdfa3e74f8dfc",
  "1bee20c6b35b98",
  "0d44eaab519d0e",
  "1282cfe8ecbb8e",
  "0a4c052019cfcf",
  "1061f578438f4f",
  "12359d17c05314",
  "12e7638274fb7a",
  "09a9f972879b1b",
  "030efe37a43ff0",
  "16e7a0ceef5601",
  "1cf753b4c0c152",
  "183e9390551041",
  "0c0e335bd61af1",
  "025413e9d4aa90",
  "02f0cacb7c0377",
  "0a414888df0dc9",
  "1e0c4ba995776f",
  "12a44c0eec83ff",
  "05a7f3f4b2b654",
  "11d878722ba851",
  "1326108c24fe72",
  "0a6402d2f025b9",
  "1585c021540f5e",
  "1a4ab2dc6b0222",
  "0b19bccd0a34ef",
  "0e94b568ac13c2",
  "1cdeb579585ce7",
  "0ef8ccf44e8426",
  "1a9f3f19c92e47",
  "027298060a0baa",
  "15a19cee124cd9",
  "11ff02b270565c",
  "10f7de95b81ff0",
  "05475a7c1be350",
  "01ead9f530e59f",
  "0945332f61cd85",
  "186d8021ad6d4e",
  "01b2af492c9815",
  "1fff7366085414",
  "00fea81e69a7f9",
  "04777ce1897832",
  "160f02dc64c806",
  "0120b2dd32442a",
  "0386eaa024fae6",
  "1d6ee957d757be",
  "171a33c89e1950",
  "09626b72d7fe90",
  "06179dc7769cdc",
  "060143eb5f8636",
  "09a9ffc25afe39",
  "1eea23cd1d3d3f",
  "157a59901e5941",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "112d8e80bb790e",
  "0b8f0a5d13b81f",
  "1e7c163022cf56",
  "0f99bce382a746",
  "0dc4376245f7bf",
  "1fb013ae19ebaa",
  "026a817784ff51",
  "058ba98fa64a0a",
  "1cf4255131b737",
  "11667c6d9640cb",
  "05dfef2368c90f",
  "0fcd371291c926",
  "075dbe4bea92da",
  "138e1739c04b91",
  "0fed9561feb906",
  "1ecf36df4ad162",
  "1524aadcb7394a",
  "1de2e2b741be6a",
  "19993b76ff4369",
  "00e6df1f527edd",
  "1600e176b6ed70",
  "1c454b3d249a99",
  "043938484d39f2",
  "0d194b6df850df",
  "19afb29ef7cf18",
  "0d7b71df275cd1",
  "1c14b24a19ab5b",
  "1816a78fcb6395",
  "004f006de0646f",
  "13dd183da1ecb0",
  "0fd5fb78e71be3",
  "0c6f8b0113e488",
  "06853df175e306",
  "0a4a8869c3e6ce",
  "0ec7c704be4375",
  "1749e6f1e0eacc",
  "0af8ac2dccb9b9",
  "112318b756798b",
  "0d096f9e24c166",
  "0876cdc61ad212",
  "028734319166fc",
  "14fc6c643f9179",
  "1c0d28b8d5ce0f",
  "12885c3308efb3",
  "08818747b865ac",
  "0f810a407652e6",
  "15b8671f158ccc",
  "1b21fcced0ef68",
  "1feb4904f45a90",
  "1d1df67d71e5d9",
  "15ca5b436883c7",
  "0fdba115e188b5",
  "0379c0b8c5dc40",
  "0ffb6d47aa6fe6",
  "1d8ea7ef7ca482",
  "141733d19b0141",
  "07a268fcaf62e6",
  "1131d6b15a90c9",
  "1902261c955d92",
  "12cbf5e19490a3",
  "1cd6130c9e9d26",
  "1821e031fb255d",
  "14cce21afb51fe",
  "148583877f75af",
  "0e3f894a4b6fde",
  "103d59c4872f90",
  "04c97a7d002591",
  "0c6372fe4e74ad",
  "04e4935b07ba1b",
  "1741f91a10f6eb",
  "0f4fd2e0e18a3e",
  "1c1aa372143723",
  "0c2c89a2adf6ce",
  "09b153ad430201",
  "1947a936815322",
  "0333e47805fd08",
  "0e42995cab95b0",
  "09afba7159c156",
  "0edc63c9be3fda",
  "095ffa7c13ddf1",
  "0eaada6aeff337",
  "183b5a5e7a4d55",
  "0a0ec9edc8e6cb",
  "02796078e2ba46",
  "17f6a0f2f1ee33",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "07c09287e44871",
  "1f28036fec0331",
  "00b0f864287e71",
  "0797fda90182f9",
  "16b32e7be1b35f",
  "185abe03fc6e1e",
  "057607585985e8",
  "12cd30420f2ac4",
  "030a9de5a32271",
  "107aa0bcbd914f",
  "1db60688e02367",
  "0420e60be03e92",
  "155f371315febc",
  "0023646fac974b",
  "10a46e4e44bbea",
  "0114581f58f928",
  "1f26d6c214fb70",
  "047b84f32369a2",
  "1982085ffe97ad",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "11ec04684451b9",
  "0608ebd5e7e3d9",
  "06d2b63c292216",
  "1723d6005c347f",
  "1ae23db65e9d71",
  "0dba146e300edf",
  "00473a20d26f84",
  "09280afa47bc23",
  "0035001ee3526a",
  "0029d9a018f858",
  "0329a8bb5c63c7",
  "1ef031b350995a",
  "1ca1031ec1c5e8",
  "0580c5d70dba23",
  "1cb935b0d37efa",
  "14aa3fb7b90ece",
  "10f955befa684f",
  "02267ba3a98d7d",
  "004d0c4e6bc769",
  "1a1a0854d0e8b4",
  "17c083a4d75a4f",
  "01393aab950ee2",
  "07ab1113c06084",
  "0f493687473c11",
  "040a641110cb78",
  "1cdf6c61bf45ac",
  "0b28f103ea2a4e",
  "1433bdd1b4eafe",
  "1ac4d34e2514a6",
  "01ed4de1b135f5",
  "07677d5ad459df",
  "149f4589461e91",
  "1ed18117614023",
  "1cff3856999eab",
  "117f5e2928d125",
  "14a208680aa8eb",
  "1a883bce36a5c3",
  "1bf08c40a0a2e8",
  "031ed90a60bd6d",
  "0e339a540fe34b",
  "0f1ea33e87e9d5",
  "117fb0eee54bf9",
  "180c7d46307ba0",
  "0e0ffe80aef416",
  "19472d93fcdde1",
  "01e983a85d5ed6",
  "1d77c83827c445",
  "197a182da9a4ff",
  "1a471ee69458e9",
  "1197e348f88218",
  "19724a1191b434",
  "045866296ab819",
  "0787e4a4cb72ed",
  "0461472ac09330",
  "11159500fdef40",
  "1747e8e9d54b1a",
  "19c4748e23276f",
  "192df069dc8fb0",
  "10e5627901eb0e",
  "127a331ae38fe1",
  "112ef7a1c0dcf3",
  "01d8d3377b4f75",
  "0288efbe437d7d",
  "190a9c9fb775de",
  "17b28d79b648e9",
  "0c77635805f960",
  "122144dea296af",
  "020c4bdc345e39",
  "0b552014d34491",
  "120088fdf23998",
  "000b09a1408cbc",
  "16b1cb4f6dce2d",
  "02f2e2dc030058",
  "060561d32915f3",
  "15335b139a8bb4",
  "1fa27da1c9b9c8",
  "0dc277b48e0a38",
  "1f18ea90ca9803",
  "055c636eb0ee46",
  "1dfc84ce641b52",
  "08fdcb861c1875",
  "003c5569c62870",
  "0615b948a32d94",
  "0d8876c7286b28",
  "0dc8b43b0899d2",
  "082740a41e8e08",
  "0eb76185dd91fe",
  "1fd9b1ebb7eabc",
  "057fad235d12bf",
  "1125fc0a111800",
  "1a97b9e3ff0ded",
  "0bd5dae597adc0",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "01d09903a67f5e",
  "095c2fc346d11b",
  "138fb005e0afd5",
  "09df99d65f1ccc",
  "1421ffb42c68c9",
  "01b5d0306e2408",
  "038aa1665d4668",
  "1cd1523fe91f58",
  "1cf4255131b737",
  "1b07a550bffb8e",
  "0c90db70b73b79",
  "1ca44da617af1e",
  "18c1f197373944",
  "063a374c23f740",
  "1d2e763d51f1ba",
  "0c7b34211016b3",
  "0fc6e01bedf802",
  "1b8ff653602c10",
  "05d1c626b0e221",
  "0d68ce22c655f0",
  "0337af9ae88eeb",
  "06cc39375a3771",
  "1f8da3d5fbf6b2",
  "0c61b4f42f532e",
  "15cb81fad894f8",
  "022fc58880d9d1",
  "02245149445755",
  "0ec5da96201c84",
  "16d5cf72657860",
  "0b6b93c4829efa",
  "01e59fbfa2a03a",
  "16e6d161d17d4a",
  "06d9786361bd76",
  "0993d7f5473935",
  "0d43a80b569a64",
  "19cc9f9050fcc8",
  "11c3c5347a63e6",
  "169e5dc03d1a09",
  "0496dbe2920ede",
  "1cae2017f02897",
  "0364991ce43db3",
  "0fcbfcd5fd490b",
  "07dddd04066602",
  "15973ebd81fbf6",
  "08c040ffeda015",
  "0c369aadeb49f1",
  "0cfec3427584b2",
  "185f590430cf5b",
  "10b133baa04110",
  "1a7cb40d83ad85",
  "0072489a08b6a2",
  "0fdba115e188b5",
  "1a2ef485f538db",
  "05ae1888b24f85",
  "19b53ec98f34d2",
  "0bfa9f1e6f1b8f",
  "06368280c10a64",
  "1131d6b15a90c9",
  "1c851473f1b3fd",
  "1b0075c9852bf7",
  "0874b1e1382659",
  "1d54dd6793a7f4",
  "1eb1a99d0f72d4",
  "148583877f75af",
  "091819f9ed911d",
  "0d2541231057fa",
  "0e3fec14db9fbd",
  "10e4008e548f2d",
  "0edfeb68204e9d",
  "1c6842546efc36",
  "172fb70baba265",
  "18261229515f3f",
  "14fb7514033e10",
  "1df9fb6ebff546",
  "0cc64572dcf26a",
  "1be70959ae9555",
  "1baff05cdc891d",
  "1e44f0e702cdd1",
  "1d66c039c17cd7",
  "1b0d6368594f8b",
  "140705f237a95d",
  "02c4df0d0f7ab2",
  "0e1b2a6f6aa81a",
  "01ceca0df8db39",
  "07446ed12cd379",
  "1097713dccc87f",
  "12793a006bb0e7",
  "1b9df5081cdbd8",
  "12f2ad4b4ca1b5",
  "10f1cceed157a0",
  "1acaa57cdb5fe0",
  "0756a49a8d2695",
  "162ef984bc2548",
  "087376bd0cf1a8",
  "1b54106e032508",
  "1a12f0f9f2d1dd",
  "1dae6781079c46",
  "0b7ff78d266aa7",
  "0fc90f09ab8cbe",
  "1d32ae77deb7de",
  "16010a69a04889",
  "07cf21fb1058ca",
  "17167f0274db45",
  "0d081a57416160",
  "1f55053298507f",
  "0a4dc7fe4dde36",
  "13229e9b767b16",
  "0b05334bb92561",
  "14b889d3a60513",
  "0cfb98c187e9f5",
  "1866f6a34d7203",
  "1723d6005c347f",
  "1c98f6a5226aa0",
  "1db704850ca3dc",
  "00e60acb5996ac",
  "04306e8c42e1cc",
  "1ae9068e8ae736",
  "04175e1db69575",
  "10feb30e8c07e6",
  "1b98b888068ae5",
  "0fef12e8e53e22",
  "1e02e0280a2685",
  "1bb3be37d64580",
  "002477462035f9",
  "0402ac9cf97eeb",
  "12015d2a268784",
  "1cc088f06178b4",
  "169f65930b0d00",
  "0de08b7ba3d7cd",
  "0ff29087c8c142",
  "07d68ff9205475",
  "077332b54ad3db",
  "149a220abab554",
  "0c6acc8a863613",
  "11eee6d96ccc35",
  "12029b8d704954",
  "1f59ef8bcb8b0a",
  "15634f7568477e",
  "17799bd42c5209",
  "0d7db7231ce99e",
  "1ed18117614023",
  "0fb0b04d42b8f3",
  "117f5e2928d125",
  "0a3517254fae32",
  "07ccaab40f59d0",
  "0c37373b8d4a7e",
  "0b896a9b114070",
  "0d66479736886d",
  "0f979827720a11",
  "1c424a1b034c19",
  "12047894ea8e4e",
  "14bea7903a9fab",
  "066c2056a2b993",
  "1eea92fc63a9db",
  "0504dbeca77d28",
  "0f0ae1a5bade51",
  "072ad1fd72a4fb",
  "07424004be50b9",
  "1f875c899eef28",
  "07167866ecc1e8",
  "02e26b850ae6a0",
  "18f32a8cb55c46",
  "0a8ede17c23a4c",
  "07051e69ec52ab",
  "0927062800df9b",
  "14123c6f577ae1",
  "10e5627901eb0e",
  "11fac760986db7",
  "0514470eccf76b",
  "18a97bba153ab9",
  "07754b1187bcf8",
  "05e8d35ede40da",
  "15e687ab893896",
  "1f542b095d0654",
  "1dffe3ce7fa56a",
  "11d7d002b49469",
  "1b07135d19573a",
  "12cc7159a8e9cb",
  "1a3a10537a5a2a",
  "1b1534b92928a0",
  "147f2aa58b1e3a",
  "06b73e851e13a0",
  "1ec580670a13bf",
  "1e9f9f43da1214",
  "04a354f7c5a1e0",
  "08bc1f50ee610b",
  "01a66c12f2b369",
  "01cee45fefa6bb",
  "1ddcd8de28cc50",
  "06c218ea39c54c",
  "0fc70b868bdef6",
  "165fe5922ca25e",
  "11195495b28685",
  "1ad16d421a76bf",
  "11d647e2db229d",
  "0d1a714ab99aa7",
  "1cc07ccd7708d8",
  "0eca101df34df9",
  "01e05fa9576976",
  "1487f6c48d678d",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "112d8e80bb790e",
  "095c2fc346d11b",
  "1e7c163022cf56",
  "0f99bce382a746",
  "0dc4376245f7bf",
  "1fb013ae19ebaa",
  "026a817784ff51",
  "058ba98fa64a0a",
  "1cf4255131b737",
  "1b07a550bffb8e",
  "0c90db70b73b79",
  "0fcd371291c926",
  "075dbe4bea92da",
  "138e1739c04b91",
  "0fed9561feb906",
  "1ecf36df4ad162",
  "0fc6e01bedf802",
  "1de2e2b741be6a",
  "19993b76ff4369",
  "00e6df1f527edd",
  "1600e176b6ed70",
  "06cc39375a3771",
  "043938484d39f2",
  "0c61b4f42f532e",
  "19afb29ef7cf18",
  "0d7b71df275cd1",
  "1c14b24a19ab5b",
  "1816a78fcb6395",
  "004f006de0646f",
  "0b6b93c4829efa",
  "0fd5fb78e71be3",
  "0c6f8b0113e488",
  "06853df175e306",
  "0a4a8869c3e6ce",
  "0ec7c704be4375",
  "1749e6f1e0eacc",
  "0af8ac2dccb9b9",
  "169e5dc03d1a09",
  "0d096f9e24c166",
  "0876cdc61ad212",
  "028734319166fc",
  "14fc6c643f9179",
  "1c0d28b8d5ce0f",
  "12885c3308efb3",
  "08c040ffeda015",
  "0f810a407652e6",
  "15b8671f158ccc",
  "1b21fcced0ef68",
  "1feb4904f45a90",
  "1a7cb40d83ad85",
  "15ca5b436883c7",
  "0fdba115e188b5",
  "0379c0b8c5dc40",
  "0ffb6d47aa6fe6",
  "1d8ea7ef7ca482",
  "141733d19b0141",
  "07a268fcaf62e6",
  "1131d6b15a90c9",
  "1902261c955d92",
  "1b0075c9852bf7",
  "1cd6130c9e9d26",
  "1821e031fb255d",
  "14cce21afb51fe",
  "148583877f75af",
  "0e3f894a4b6fde",
  "103d59c4872f90",
  "04c97a7d002591",
  "0c6372fe4e74ad",
  "0edfeb68204e9d",
  "1741f91a10f6eb",
  "0f4fd2e0e18a3e",
  "1c1aa372143723",
  "0c2c89a2adf6ce",
  "09b153ad430201",
  "1947a936815322",
  "0333e47805fd08",
  "0e42995cab95b0",
  "09afba7159c156",
  "1d66c039c17cd7",
  "095ffa7c13ddf1",
  "0eaada6aeff337",
  "02c4df0d0f7ab2",
  "0a0ec9edc8e6cb",
  "02796078e2ba46",
  "17f6a0f2f1ee33",
  "0a9a19ed1be2ef",
  "18121733b781e9",
  "07c09287e44871",
  "1f28036fec0331",
  "00b0f864287e71",
  "0797fda90182f9",
  "0756a49a8d2695",
  "185abe03fc6e1e",
  "087376bd0cf1a8",
  "1b54106e032508",
  "1a12f0f9f2d1dd",
  "1dae6781079c46",
  "1db60688e02367",
  "0fc90f09ab8cbe",
  "155f371315febc",
  "0023646fac974b",
  "10a46e4e44bbea",
  "17167f0274db45",
  "0d081a57416160",
  "047b84f32369a2",
  "0a4dc7fe4dde36",
  "1b1f7e90fd53fd",
  "1c3ecdf7ede737",
  "11ec04684451b9",
  "0cfb98c187e9f5",
  "1866f6a34d7203",
  "1723d6005c347f",
  "1c98f6a5226aa0",
  "0dba146e300edf",
  "00473a20d26f84",
  "09280afa47bc23",
  "0035001ee3526a",
  "04175e1db69575",
  "0329a8bb5c63c7",
  "1ef031b350995a",
  "1ca1031ec1c5e8",
  "0580c5d70dba23",
  "1cb935b0d37efa",
  "14aa3fb7b90ece",
  "10f955befa684f",
  "02267ba3a98d7d",
  "004d0c4e6bc769",
  "1a1a0854d0e8b4",
  "0de08b7ba3d7cd",
  "01393aab950ee2",
  "07ab1113c06084",
  "0f493687473c11",
  "040a641110cb78",
  "0c6acc8a863613",
  "0b28f103ea2a4e",
  "1433bdd1b4eafe",
  "1ac4d34e2514a6",
  "01ed4de1b135f5",
  "17799bd42c5209",
  "0d7db7231ce99e",
  "1ed18117614023",
  "1cff3856999eab",
  "117f5e2928d125",
  "0a3517254fae32",
  "1a883bce36a5c3",
  "1bf08c40a0a2e8",
  "031ed90a60bd6d",
  "0e339a540fe34b",
  "0f1ea33e87e9d5",
  "117fb0eee54bf9",
  "180c7d46307ba0",
  "0e0ffe80aef416",
  "19472d93fcdde1",
  "01e983a85d5ed6",
  "0504dbeca77d28",
  "197a182da9a4ff",
  "1a471ee69458e9",
  "07424004be50b9",
  "1f875c899eef28",
  "07167866ecc1e8",
  "0787e4a4cb72ed",
  "0461472ac09330",
  "0a8ede17c23a4c",
  "1747e8e9d54b1a",
  "0927062800df9b",
  "192df069dc8fb0",
  "10e5627901eb0e",
  "127a331ae38fe1",
  "112ef7a1c0dcf3",
  "01d8d3377b4f75",
  "0288efbe437d7d",
  "190a9c9fb775de",
  "17b28d79b648e9",
  "0c77635805f960",
  "122144dea296af",
  "020c4bdc345e39",
  "0b552014d34491",
  "12cc7159a8e9cb",
  "1a3a10537a5a2a",
  "1b1534b92928a0",
  "02f2e2dc030058",
  "06b73e851e13a0",
  "1ec580670a13bf",
  "1fa27da1c9b9c8",
  "0dc277b48e0a38",
  "08bc1f50ee610b",
  "055c636eb0ee46",
  "01cee45fefa6bb",
  "08fdcb861c1875",
  "003c5569c62870",
  "0615b948a32d94",
  "0d8876c7286b28",
  "0dc8b43b0899d2",
  "082740a41e8e08",
  "0eb76185dd91fe",
  "0d1a714ab99aa7",
  "057fad235d12bf",
  "1125fc0a111800",
  "1a97b9e3ff0ded",
  "0bd5dae597adc0",
]
`;
